--- a/app/src/main/res/layout/activity_add_mark.xml
+++ b/app/src/main/res/layout/activity_add_mark.xml
@@ -10,38 +10,39 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Test Name"
-        android:textSize="22sp"/>
+        android:textSize="22sp" />
 
     <EditText
         android:layout_marginTop="10dp"
         android:id="@+id/test_name"
+        android:inputType="text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <TextView
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Select subject"
-        android:textSize="22sp"/>
+        android:textSize="22sp" />
 
 
     <Spinner
         android:layout_marginTop="10dp"
         android:id="@+id/choose_subject"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <TextView
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Mark"
-        android:textSize="25sp"/>
+        android:textSize="25sp" />
 
     <LinearLayout
         android:layout_marginTop="10dp"
-       android:layout_marginLeft="60dp"
+        android:layout_marginLeft="60dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -52,15 +53,15 @@
             android:id="@+id/scoredMark"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            />
-    <TextView
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="/"
-        android:textSize="40sp"/>
+            android:inputType="number" />
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="/"
+            android:textSize="40sp" />
 
 
         <EditText
@@ -69,10 +70,8 @@
             android:layout_marginTop="10dp"
             android:id="@+id/outofMark"
             android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content" />
     </LinearLayout>
-
 
 
     <LinearLayout
@@ -87,16 +86,17 @@
             android:layout_marginTop="120dp"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:text="ok"/>
+            android:text="ok"
+            android:onClick="onClickOk" />
 
         <Button
+            android:onClick="onClickCancel"
             android:layout_marginTop="120dp"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:text="Cancel"/>
+            android:text="Cancel" />
 
     </LinearLayout>
-
 
 
 </LinearLayout>
