--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Schedule"
-        android:onClick="onClickSchedule"/>
+        android:onClick="onClickSchedule" />
 
     <Button
         android:textColor="#ac0000"
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Subject"
-        android:onClick="onclickSubject"/>
+        android:onClick="onclickSubject" />
 
 
     <Button
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Task"
-        android:onClick="onClickTask"/>
+        android:onClick="onClickTask" />
 
 
     <Button
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Exam"
-        android:onClick="onclickexam"/>
+        android:onClick="onclickExam" />
 
     <Button
         android:textColor="#49ac15"
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Mark"
-        android:onClick="onClickMark"/>
+        android:onClick="onClickMark" />
 
 
 </LinearLayout>
