--- a/app/src/main/res/layout/activity_add_mark.xml
+++ b/app/src/main/res/layout/activity_add_mark.xml
@@ -75,28 +75,30 @@
 
 
     <LinearLayout
-
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        >
+        android:layout_gravity="bottom"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="2">
 
         <Button
-            android:layout_marginTop="120dp"
-            android:layout_width="180dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ok"
-            android:onClick="onClickOk" />
+            android:layout_gravity="bottom"
+
+            android:layout_weight="1"
+            android:onClick="onClickOk"
+            android:text="ok" />
 
         <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
             android:onClick="onClickCancel"
-            android:layout_marginTop="120dp"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
             android:text="Cancel" />
 
     </LinearLayout>
-
 
 </LinearLayout>
