--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,51 +2,57 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_centerInParent="true"
     android:orientation="vertical"
-    android:padding="30dp"
-    android:layout_centerInParent="true">
+
+    android:padding="30dp">
 
     <Button
-        android:textColor="#ac0000"
         android:id="@+id/bt_schedule"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:onClick="onClickSchedule"
         android:text="Schedule"
-        android:onClick="onClickSchedule" />
+        android:textColor="#ac0000" />
 
     <Button
-        android:textColor="#ac0000"
         android:id="@+id/bt_subject"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:onClick="onclickSubject"
         android:text="Subject"
-        android:onClick="onclickSubject" />
+        android:textColor="#49ac15" />
 
 
     <Button
-        android:textColor="#ac0000"
         android:id="@+id/bt_task"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:onClick="onClickTask"
         android:text="Task"
-        android:onClick="onClickTask" />
+        android:textColor="#49ac15" />
 
 
     <Button
-        android:textColor="#ac0000"
         android:id="@+id/bt_exam"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:onClick="onclickExam"
         android:text="Exam"
-        android:onClick="onclickExam" />
+        android:textColor="#49ac15" />
 
     <Button
-        android:textColor="#49ac15"
         android:id="@+id/bt_mark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:onClick="onClickMark"
         android:text="Mark"
-        android:onClick="onClickMark" />
+        android:textColor="#49ac15" />
 
 
 </LinearLayout>
