--- a/app/src/main/res/layout/activity_schedule_data.xml
+++ b/app/src/main/res/layout/activity_schedule_data.xml
@@ -1,12 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.kunal.studymanager.ScheduleData">
+    android:orientation="vertical"
+    android:padding="20dp">
 
-</RelativeLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Expected Date of Exam"
+        android:textSize="20sp" />
+
+    <EditText
+        android:inputType="date"
+        android:focusable="false"
+        android:id="@+id/TargetDate"
+        android:layout_width="210dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:onClick="ChooseTargetDate" />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Total Subject"
+        android:textSize="20sp" />
+
+    <EditText
+        android:id="@+id/TotalSubject"
+        android:inputType="number"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp" />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Number Of Subject Per Day"
+        android:textSize="22sp" />
+
+
+    <Spinner
+        android:id="@+id/NoOfSubDay"
+        android:layout_width="210dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Select Repetition"
+        android:textSize="22sp" />
+
+
+    <Spinner
+        android:id="@+id/Repetition"
+        android:layout_width="210dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp" />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:onClick="onClickNext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="15dp"
+            android:gravity="bottom"
+            android:text="Next"
+            android:textAllCaps="false"
+            android:textSize="20sp"
+            android:textAlignment="center"
+
+            />
+    </RelativeLayout>
+
+
+</LinearLayout>
