--- a/app/src/main/res/layout/activity_add_exam.xml
+++ b/app/src/main/res/layout/activity_add_exam.xml
@@ -8,16 +8,35 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Task Name"
+        android:layout_marginTop="10dp"
+        android:paddingTop="20dp"
+        android:text="Title"
         android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/taskName"
+        android:id="@+id/ExamName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp" />
+        android:layout_marginTop="5dp"
+        android:inputType="text" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:paddingTop="20dp"
+        android:text="Subject"
+        android:textSize="20sp" />
+
+    <EditText
+        android:id="@+id/SubjectName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:inputType="text" />
 
     <LinearLayout
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -26,6 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
 
             <TextView
                 android:layout_width="match_parent"
@@ -36,12 +56,12 @@
 
 
             <EditText
-                android:id="@+id/TaskDatePick"
+                android:id="@+id/ExamDatePick"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:focusable="false"
-                android:onClick="TaskChooseDate" />
+                android:onClick="ExamDate" />
         </LinearLayout>
 
 
@@ -60,47 +80,15 @@
 
 
             <EditText
-                android:id="@+id/TaskTimePick"
+                android:id="@+id/ExamTimePick"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
                 android:focusable="false"
-                android:onClick="TaskChooseTime" />
+                android:onClick="ExamTime" />
         </LinearLayout>
     </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp">
-
-        <CheckBox
-            android:onClick="checkboxclickfun"
-            android:id="@+id/RemainderCheckbox"
-            android:layout_marginTop="13dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_marginLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="Remainder"
-            android:textSize="23sp" />
-
-
-    </LinearLayout>
-
-    <Spinner
-        android:visibility="gone"
-        android:layout_marginTop="10dp"
-        android:id="@+id/choose_remainder_day"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
 
     <LinearLayout
@@ -115,7 +103,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-
             android:layout_weight="1"
             android:onClick="onClickOk"
             android:text="ok" />
@@ -129,4 +116,6 @@
             android:text="Cancel" />
 
     </LinearLayout>
+
+
 </LinearLayout>
