--- a/app/src/main/res/layout/activity_show_exam.xml
+++ b/app/src/main/res/layout/activity_show_exam.xml
@@ -31,10 +31,11 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <TextView
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/exam_detail_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tempDisplay"
-        android:textSize="22sp" />
+        android:layout_height="match_parent">
+
+    </ListView>
 
 </RelativeLayout>
