--- a/app/src/main/res/layout/activity_show_subject.xml
+++ b/app/src/main/res/layout/activity_show_subject.xml
@@ -10,6 +10,14 @@
     tools:context="com.example.kunal.ShowSubject">
 
 
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/subject_detail_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ListView>
+
+
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,10 +39,5 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tempDisplay"
-        android:textSize="22sp" />
 
 </RelativeLayout>
