--- a/app/src/main/res/layout/activity_show_task.xml
+++ b/app/src/main/res/layout/activity_show_task.xml
@@ -9,6 +9,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.kunal.studymanager.ShowTask">
 
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/task_detail_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -31,10 +35,5 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tempDisplay"
-        android:textSize="22sp" />
 
 </RelativeLayout>
