--- a/app/src/main/res/layout/activity_add_mark.xml
+++ b/app/src/main/res/layout/activity_add_mark.xml
@@ -13,6 +13,7 @@
         android:textSize="22sp" />
 
     <EditText
+        android:maxLines="1"
         android:layout_marginTop="10dp"
         android:id="@+id/test_name"
         android:inputType="text"
@@ -23,11 +24,12 @@
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Select subject"
+        android:text="subject Name"
         android:textSize="22sp" />
 
 
-    <Spinner
+    <EditText
+        android:maxLines="1"
         android:layout_marginTop="10dp"
         android:id="@+id/choose_subject"
         android:layout_width="match_parent"
@@ -48,6 +50,7 @@
         android:orientation="horizontal">
 
         <EditText
+            android:maxLines="1"
             android:gravity="center"
             android:layout_marginTop="10dp"
             android:id="@+id/scoredMark"
@@ -65,6 +68,7 @@
 
 
         <EditText
+            android:maxLines="1"
             android:gravity="center"
             android:inputType="number"
             android:layout_marginTop="10dp"
