--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -11,7 +11,7 @@
         android:text="Task Name"
         android:textSize="20sp" />
 
-    <EditText
+    <EditText android:maxLines="1"
         android:id="@+id/taskName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
