--- a/app/src/main/res/layout/activity_scheduler_next.xml
+++ b/app/src/main/res/layout/activity_scheduler_next.xml
@@ -10,10 +10,12 @@
     tools:context="com.example.kunal.studymanager.SchedulerNext">
 
     <TextView
+        android:textStyle="bold"
+        android:textColor="@color/colorAccent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your Study Schedule Days"
-        android:textSize="30sp" />
+        android:textSize="25sp" />
 
     <LinearLayout
         android:layout_marginTop="50dp"
@@ -35,6 +37,7 @@
 
                 <TextView
                     android:id="@+id/TextSub1"
+                    android:maxLines="1"
                     android:visibility="gone"
                     android:layout_marginLeft="10dp"
                     android:text="sub1"
@@ -43,6 +46,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:maxLines="1"
                     android:id="@+id/TextSub2"
                     android:visibility="gone"
                     android:layout_marginLeft="10dp"
@@ -52,6 +56,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:maxLines="1"
                     android:id="@+id/TextSub3"
                     android:visibility="gone"
                     android:layout_marginLeft="10dp"
@@ -61,6 +66,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:maxLines="1"
                     android:id="@+id/TextSub4"
                     android:visibility="gone"
                     android:text="sub4"
@@ -134,6 +140,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:maxLines="1"
                     android:id="@+id/TextSub5"
                     android:visibility="gone"
                     android:layout_marginLeft="10dp"
@@ -143,6 +150,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:maxLines="1"
                     android:id="@+id/TextSub6"
                     android:visibility="gone"
                     android:layout_marginLeft="10dp"
@@ -152,6 +160,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:maxLines="1"
                     android:id="@+id/TextSub7"
                     android:visibility="gone"
                     android:layout_marginLeft="10dp"
@@ -161,6 +170,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:maxLines="1"
                     android:id="@+id/TextSub8"
                     android:visibility="gone"
                     android:text="sub8"
