homepage -  update [ exam ]

--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -78,7 +78,7 @@
                     android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Today"
+                    android:text="No Data"
                     android:textSize="15sp"
                     android:padding="5sp"
                     android:layout_marginLeft="10dp" />
@@ -107,7 +107,7 @@
                     android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Task"
+                    android:text="No Data"
                     android:textSize="15sp"
                     android:padding="5sp"
                     android:layout_marginTop="10dp"
@@ -154,7 +154,7 @@
                     android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Today"
+                    android:text="No Data"
                     android:textSize="15sp"
                     android:padding="5sp"
                     android:layout_marginLeft="10dp" />
@@ -182,7 +182,7 @@
                     android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Exam"
+                    android:text="No Data"
                     android:textSize="15sp"
                     android:padding="5sp"
                     android:layout_marginTop="10dp"
