All Delete job    [ done ]

--- a/app/src/main/res/layout/subject_detail_list_view.xml
+++ b/app/src/main/res/layout/subject_detail_list_view.xml
@@ -53,18 +53,24 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
             android:textSize="15sp"
-            tools:text="15/12/1993" />
+            tools:text="15" />
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_delete"
+                android:onClick="delete_subject"
+                android:clickable="true"
+                android:layout_marginRight="7dp" />
+        </RelativeLayout>
 
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_delete"
-        android:layout_gravity="right"
-        android:onClick="check"
-        android:layout_marginRight="10dp"
-        />
+
 
 
 </LinearLayout>
