--- a/app/src/main/res/layout/exam_detail_list_item.xml
+++ b/app/src/main/res/layout/exam_detail_list_item.xml
@@ -82,6 +82,19 @@
             android:textSize="15sp"
             tools:text="15/12/1993" />
 
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_delete"
+                android:onClick="delete_exam"
+                android:clickable="true"
+                android:layout_marginRight="7dp" />
+        </RelativeLayout>
+
     </LinearLayout>
 
 
