--- a/app/src/main/res/layout/marks_detail_list_item.xml
+++ b/app/src/main/res/layout/marks_detail_list_item.xml
@@ -54,6 +54,20 @@
             android:textSize="15sp"
             tools:text="Android" />
 
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_delete"
+                android:onClick="delete_marks"
+                android:clickable="true"
+                android:layout_marginRight="7dp" />
+        </RelativeLayout>
+
     </LinearLayout>
 
 
