--- a/app/src/main/res/layout/activity_show_schedule.xml
+++ b/app/src/main/res/layout/activity_show_schedule.xml
@@ -9,6 +9,29 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.kunal.studymanager.ShowMark">
 
+
+    <ImageView
+        android:visibility="gone"
+        android:src="@mipmap/ic_alert"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/img_Alert"
+        />
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:visibility="gone"
+        android:layout_below="@id/img_Alert"
+        android:layout_centerHorizontal="true"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/message"
+        android:textSize="20sp"
+        android:text="   Your Smartphone does not support to add event in calendar!!"
+        />
+
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/Schedule_detail_list_view"
         android:layout_width="match_parent"
