Back button fix

--- a/app/src/main/res/layout/activity_scheduler_next.xml
+++ b/app/src/main/res/layout/activity_scheduler_next.xml
@@ -14,7 +14,7 @@
         android:textColor="@color/colorAccent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your Study Schedule Days"
+        android:text="Your Study Sessions"
         android:textSize="25sp" />
 
     <LinearLayout
