--- a/app/src/main/res/layout/activity_show_schedule.xml
+++ b/app/src/main/res/layout/activity_show_schedule.xml
@@ -15,7 +15,7 @@
         android:src="@mipmap/ic_alert"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_centerInParent="true"
+        android:layout_marginTop="110dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/img_Alert"
         />
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/message"
         android:textSize="20sp"
-        android:text="   Your Smartphone does not support to add event in calendar!!"
+        android:text="Your Smartphone does not support to add event to calendar \n\t\tor\n you might not be completed add schedule process completely\nReset schedule and try again!!"
         />
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
