--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -85,6 +85,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:onClick="open_task"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight=".5"
@@ -160,6 +161,7 @@
                 </LinearLayout>
 
             <LinearLayout
+                android:onClick="open_exam"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight=".5"
