--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/nav_header_vertical_spacing"
-                android:text="Manager"
+                android:text="Scheduler"
                 android:textSize="25sp"
                 android:layout_marginTop="-8dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
